--- a/stream.ipynb
+++ b/stream.ipynb
@@ -3,6 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Stream data\n",
     "\n",
@@ -35,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading readme: 100%|██████████| 304k/304k [00:01<00:00, 254kB/s]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "dataset = load_dataset('oscar', \"unshuffled_deduplicated_en\", split='train', streaming=True)"
@@ -53,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,15 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/chenchen/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "import nltk\n",
     "from nltk import word_tokenize\n",
     "import numpy as np\n",
-    "\n",
+    "nltk.download('punkt')\n",
     "h1 = hashlib.md5()\n",
     "h2 = hashlib.sha1()\n",
     "h3 = hashlib.sha224()\n",
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,48 +457,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# most_frequent_words = misra_greis_v0(shuffled_dataset,100)\n",
-    "# most_frequent_words = countmin_v0(shuffled_dataset)\n",
-    "# print(most_frequent_words)"
+    "def morris_v2(dataset,hash_function,L=32,log_interval=1000,max_iter=100000):\n",
+    "    # HyperLogLog\n",
+    "    # 使用了\n",
+    "    log_file = './log_mo_v2.txt'\n",
+    "    with open(log_file,'w') as f:\n",
+    "        f.truncate()\n",
+    "    BIG_NUMBER = 2**L\n",
+    "    m = 64\n",
+    "    X = [0]*m\n",
+    "\n",
+    "    PHI = 0.77351\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    for idx,example in enumerate(tqdm(dataset)):\n",
+    "        tokens = word_tokenize(example['text'])\n",
+    "        \n",
+    "        for token in tokens:\n",
+    "            if is_punctuation(token):\n",
+    "                continue\n",
+    "            token = token.lower()\n",
+    "            token_bytes = token.encode('utf-8')\n",
+    "            \n",
+    "            hash_function.update(token_bytes)\n",
+    "            h_value = int(hash_function.hexdigest(),16)\n",
+    "            h_value = h_value % (BIG_NUMBER)\n",
+    "            group_index = h_value % m\n",
+    "            # 计算h_value的二进制表示中最低位的1的位置\n",
+    "            lsb = 0\n",
+    "            h_value = int(h_value / m)\n",
+    "            while h_value % 2 == 0:\n",
+    "                lsb += 1\n",
+    "                h_value = h_value >> 1\n",
+    "                if lsb == L:\n",
+    "                    break\n",
+    "            X[group_index] = max(X[group_index],lsb)\n",
+    "        \n",
+    "        avg_X = np.nanmean(X)\n",
+    "        if idx % log_interval == 0:\n",
+    "            esti = 2**avg_X/PHI\n",
+    "            with open(log_file,'a') as f:\n",
+    "                f.write(f'Iteration {idx}: counting'\n",
+    "                        +f' {int(esti)} '\n",
+    "                        +f'Elapsed time: {time.time()-start} seconds'\n",
+    "                        +'\\n')\n",
+    "        if idx == max_iter:\n",
+    "            break\n",
+    "    return (2**avg_X)/PHI*m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "232612it [35:53, 166.05it/s]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [2/20]\n",
-      "324369it [1:09:38,  5.48it/s] Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "327749it [1:28:49, 141.41it/s]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [2/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [3/20]\n",
-      "327749it [1:29:02, 141.41it/s]Got disconnected from remote data host. Retrying in 5sec [4/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [5/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [6/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [7/20]\n",
-      "644543it [2:37:06, 187.43it/s]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "699002it [2:53:46, 209.66it/s]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "865454it [3:25:00, 105.33it/s]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "922321it [11:06:18, 114.92s/it]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "Got disconnected from remote data host. Retrying in 5sec [2/20]\n",
-      "996507it [11:20:27, 194.48it/s]Got disconnected from remote data host. Retrying in 5sec [1/20]\n",
-      "1000000it [11:21:32, 24.45it/s]"
+      "100000it [16:46, 99.38it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "347035534.12367\n"
+      "{'in': 627752, 'the': 2894023, 'of': 1146693, 'and': 1409887, 'to': 1250314, 'a': 917611, 'for': 160238, 'that': 95517, 'is': 244508, 'i': 31126, 'you': 31983, 'it': 171, 'with': 21, 'on': 11, 'as': 19, 'company': 10, 'from': 5, 'or': 1, 'apos': 5, 's': 7, 'we': 5, 'me': 2, 'pain': 1, 'lost': 1, 'my': 3, 'was': 1, 'lot': 1, 'get': 1, 'can': 1, 'had': 2, 'no': 1, 'preconceptions': 1, 'about': 1, 'she': 2, 'would': 1, 'be': 1, 'think': 1, 'know': 2, 't': 1, 'anybody': 1, 'so': 2, 'interesting': 1, 'because': 1, 'her': 1, 'physicality': 1, 'extraordinary': 1}\n"
      ]
     },
     {
@@ -504,7 +538,40 @@
     }
    ],
    "source": [
-    "card_count = morris_v0(shuffled_dataset,hashlib.md5())\n",
+    "most_frequent_words = misra_greis_v0(shuffled_dataset,100)\n",
+    "# most_frequent_words = countmin_v0(shuffled_dataset)\n",
+    "print(most_frequent_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100000it [10:10, 163.91it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99875892.32353742\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "card_count = morris_v2(shuffled_dataset,hashlib.md5())\n",
     "print(card_count)"
    ]
   },
@@ -14847,7 +14914,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "33c96bd2355e5b05cfe23fba993c55d7f9aef5ad83899779cb45562f951f9a2f"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
