--- a/stream.ipynb
+++ b/stream.ipynb
@@ -415,6 +415,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countmin_v2(dataset,d=8,w=65536,log_interval=1000,max_iter=100000):\n",
+    "    '''\n",
+    "    For task1\n",
+    "    ConutMin Sketch (Cormode-Muthukrishnan) from Lec5\n",
+    "    :param dataset: dataset\n",
+    "    :param d: number of hash functions\n",
+    "    :param w: domain of hash functions\n",
+    "    :param log_interval: log interval\n",
+    "    :param max_iter: max stream item to process\n",
+    "    :return D: dictionary of top-k items\n",
+    "    '''\n",
+    "    log_file = './log_cm_v2.txt'\n",
+    "    with open(log_file,'w') as f:\n",
+    "        f.truncate()\n",
+    "    \n",
+    "    sketch = np.zeros((d,w))\n",
+    "    heap = []\n",
+    "    start = time.time()\n",
+    "    for idx,example in enumerate(tqdm(dataset)):\n",
+    "        tokens = word_tokenize(example['text'])\n",
+    "        \n",
+    "        for token in tokens:\n",
+    "            if is_punctuation(token):\n",
+    "                continue\n",
+    "            token = token.lower()\n",
+    "            token_bytes = token.encode('utf-8')\n",
+    "            h_value_min = 0x3f3f3f3f\n",
+    "            for hash_idx,h in enumerate(hash_functions):\n",
+    "                h.update(token_bytes)\n",
+    "                h_value = int(h.hexdigest(),16)\n",
+    "                h_value = h_value % w\n",
+    "                sketch[hash_idx,h_value] += 1\n",
+    "                h_value_min = min(h_value_min, sketch[hash_idx,h_value])\n",
+    "            find = False\n",
+    "            for l in heap:\n",
+    "                if l[1] == token:\n",
+    "                    find = True\n",
+    "                    l[0] = l[0] + 1\n",
+    "                    heapq.heapify(heap)\n",
+    "                    break\n",
+    "            if find == False:\n",
+    "                if len(heap) <= 100:\n",
+    "                    heap.append([1, token])\n",
+    "                    heapq.heapify(heap)\n",
+    "                elif heap[0][0] < h_value_min:\n",
+    "                    heap[0][0] = h_value\n",
+    "                    heap[0][1] = token\n",
+    "                    heapq.heapify(heap)\n",
+    "    \n",
+    "        if idx % log_interval == 0:\n",
+    "            # print(f\"Iteration{idx} Elapsed time: {time.time()-start} seconds\")\n",
+    "            heap = sorted(heap, key=lambda k: k[0], reverse=True)\n",
+    "            with open(log_file,'a') as f:\n",
+    "                f.write(f'Iteration {idx}: '\n",
+    "                        +''.join([f\"{l[1]}:{l[0]} \" for l in heap])\n",
+    "                        +f'Elapsed time: {time.time()-start} seconds'\n",
+    "                        +'\\n')\n",
+    "            heapq.heapify(heap)\n",
+    "        if idx == max_iter:\n",
+    "            break\n",
+    "    return sorted(heap, key=lambda k: int(k[0]), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
@@ -539,6 +608,24 @@
     "        if idx == max_iter:\n",
     "            break\n",
     "    return 2**X/PHI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_frequent_words = countmin_v2(shuffled_dataset)\n",
+    "print(most_frequent_words)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "100000it [20:40, 80.64it/s][[3465289, 'the'], [1981153, 'and'], [1821580, 'to'], [1717959, 'of'], [1488877, 'a'], [1199018, 'in'], [731504, 'for'], [612527, 'i'], [552293, 'with'], [490832, 'on'], [408132, 'as'], [407455, 'this'], [392901, 'are'], [332241, 'by'], [304321, 'at'], [298002, 'we'], [294543, 'from'], [278775, 'can'], [247909, 'will'], [235535, 's'], [219336, 'my'], [199151, 'they'], [195466, 'all'], [183548, 'has'], [183349, 'so'], [171856, 'more'], [135810, 'when'], [130282, 'then'], [88802, 'she'], [79886, 'most'], [69014, 'industrial'], [66265, 'button'], [62568, 'best'], [60857, 'pastel'], [57733, 'kc'], [57439, 'where'], [53004, 'feathers'], [47747, 'type'], [46817, 'compared'], [45978, 'feeling'], [42190, 'childcare'], [41373, 'needs'], [40696, 'cracks'], [39853, 'stage'], [36740, 'service'], [35127, 'oh'], [33879, 'enough'], [32692, 'services'], [29864, 'experience'], [28720, 'five'], [26376, 'group'], [25446, 'orthodontic'], [23793, 'working'], [21836, 'large'], [21404, 'program'], [19607, 'include'], [19350, 'become'], [18497, 'country'], [18378, 'states'], [17527, 'radium'], [17276, 'h'], [16906, 'came'], [16831, 'across'], [13769, 'major'], [12350, 'field'], [11309, 'watch'], [11150, 'customer'], [10758, 'recently'], [10527, 'role'], [10362, 'ensure'], [9894, 'follow'], [9210, 'leading'], [9166, 'director'], [9089, 'worked'], [9081, 'effective'], [8884, 'led'], [8157, 'improve'], [7816, 'previous'], [7450, 'develop'], [6929, 'association'], [6812, 'vehicle'], [6397, 'delivery'], [6311, 'opportunities'], [5846, 'agency'], [5415, 'served'], [5296, 'executive'], [5029, 'driver'], [4429, 'practices'], [4198, 'authority'], [3951, 'division'], [3814, 'consumer'], [3762, 'networks'], [3681, 'motor'], [3591, 'vehicles'], [3487, 'registration'], [3061, 'constantly'], [2853, 'relations'], [2851, 'positions'], [2507, 'offices'], [1439, 'carrier'], [1397, 'identifying']]"
    ]
   },
   {
@@ -15104,7 +15191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bigdata",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -15118,12 +15205,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12 (main, Mar 26 2022, 15:44:31) \n[Clang 13.1.6 (clang-1316.0.21.2)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a75cb4582035c7a67dc9a65e82ee32661e111a81dcf478e2c20b111a4b9742c9"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
