--- a/stream.ipynb
+++ b/stream.ipynb
@@ -684,94 +684,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MapReduce\n",
-    "import time\n",
-    "import os\n",
-    "from multiprocessing import Process,Manager,Pool\n",
-    "\n",
-    "def data(path):  #data用来提取文档数据，汇总到列表中\n",
-    "    lis = []\n",
-    "    file = open(path,'r',encoding='utf-8')\n",
-    "    txt = file.readline()\n",
-    "    n = 1\n",
-    "    for txt in file:\n",
-    "        if n%6==4:\n",
-    "            content = txt.strip('\\n')\n",
-    "            content = content.replace('<content>','') #除去无用信息\n",
-    "            content = content.replace('</content>','')\n",
-    "            if len(content)>0:\n",
-    "                lis.append(content)\n",
-    "        n+=1\n",
-    "    file.close()\n",
-    "    return lis  #所有文档汇总到列表中并返回\n",
-    "\n",
-    "def Map_v0(sentences,lis):  #Map函数进行分词并存储到列表\n",
-    "    print('process %d start'%os.getpid())\n",
-    "    for snt_idx,snt in enumerate(sentences):\n",
-    "        words = word_tokenize(snt['text'])\n",
-    "        \n",
-    "        print('process %d working on sentence %d'%(os.getpid(),snt['id']))\n",
-    "        \n",
-    "        for wd in words:\n",
-    "            if not is_punctuation(wd):\n",
-    "                lis.append((wd,1))\n",
-    "                \n",
-    "        if snt_idx % 1000 == 0:\n",
-    "            print('process %d has done %d sentences'%(os.getpid(),snt_idx))\n",
-    "    #print(len(lis))\n",
-    "\n",
-    "def Reduce_v0(lis):  #Reduce函数将结果汇总到字典中\n",
-    "    # print('time2 = %f'%(time.time()-start_time))  #测试Map函数总耗时（分词总耗时）\n",
-    "    dic = {}\n",
-    "    for k,v in lis:\n",
-    "        dic[k] = dic.get(k,0)+1\n",
-    "        #print(dic)\n",
-    "    dic_order=sorted(dic.items(),key=lambda x:x[1],reverse=True)  #字典降序排序\n",
-    "    with open('log_mr_v0.txt','a',encoding='utf-8') as file:\n",
-    "        for k,v in dic_order:\n",
-    "            file.write(k+':'+str(v)+'\\n')  #将结果写入文件\n",
-    "\n",
-    "def Map_Reduce_v0(dataset,num_workers=6,item_per_worker=10000,max_iter=100000):\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    log_file = './log_mr_v0.txt'\n",
-    "    with open(log_file,'w') as f:\n",
-    "        f.truncate()\n",
-    "\n",
-    "    plist = []\n",
-    "    # 用Pool改写一下，别用list of Process了\n",
-    "    # pool = Pool(num_workers)\n",
-    "    m = Manager()\n",
-    "    managed_list = m.list([])\n",
-    "    \n",
-    "    print('time1 (Initialize) = %f'%(time.time()-start_time))  #测试提取文档用时\n",
-    "    \n",
-    "    for i in range(max_iter//item_per_worker):   #创建进程\n",
-    "        sample = dataset.take(item_per_worker)\n",
-    "        p = Process(target=Map_v0,args=(sample,managed_list))\n",
-    "        plist.append(p)\n",
-    "        # pool.apply_async(Map_v0,args=(sample,managed_list))\n",
-    "        dataset = dataset.skip(item_per_worker)\n",
-    "        print('time (Initialize process %d) = %f'%(i,time.time()-start_time))\n",
-    "    # pool.close()\n",
-    "    # pool.join()  \n",
-    "    for p in plist:\n",
-    "        p.start()  #启动进程\n",
-    "    for p in plist:\n",
-    "        p.join()  #阻滞主进程\n",
-    "    print('time2 (Map) = %f'%(time.time()-start_time))  #测试Map函数总耗时\n",
-    "    \n",
-    "    Reduce_v0(managed_list) #当Map进程全部完成之后Reduce进行结果归约\n",
-    "    \n",
-    "    print('time3 (Reduce) = %f'%(time.time() - start_time))   #测试总用时\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -796,7 +708,6 @@
    "source": [
     "# most_frequent_words = misra_greis_v2(shuffled_dataset,100)\n",
     "# most_frequent_words = countmin_v0(shuffled_dataset)\n",
-    "Map_Reduce_v0(shuffled_dataset)\n",
     "# print(most_frequent_words)"
    ]
   },
@@ -15191,7 +15102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "bigdata",
    "language": "python",
    "name": "python3"
   },
@@ -15205,12 +15116,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Mar 26 2022, 15:44:31) \n[Clang 13.1.6 (clang-1316.0.21.2)]"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "a75cb4582035c7a67dc9a65e82ee32661e111a81dcf478e2c20b111a4b9742c9"
    }
   }
  },
